// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubscriptionDetails /> renders 3 product in a subscription details 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      Shopping details are loaded.
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        In your cart
      </h5>
      <div
        className=""
      >
        <div
          className="heading-badge-wrapper"
        >
          <h3
            aria-level="2"
            className="mb-0"
          >
            Blockchain Fundamentals
          </h3>
          <span
            className="badge badge-light"
          >
            Subscription
          </span>
        </div>
        <h4
          aria-level="2"
          className="mb-0"
        >
          Professional Certificate
        </h4>
        <p
          aria-level="2"
          className="body small mb-5"
        >
          University of California, Berkeley
        </p>
        <h5>
          Included with your subscription:
        </h5>
      </div>
      <div
        className="row align-items-center mb-3 product-wrapper"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/watpewal.gif"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Pigeonss
          </h6>
          <p
            className="m-0"
          >
            Verified Certificate
          </p>
        </div>
      </div>
      <div
        className="row align-items-center mb-3 product-wrapper"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/lekigud.gif"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Pigs
          </h6>
          <p
            className="m-0"
          >
            Verified Certificate
          </p>
        </div>
      </div>
      <div
        className="row align-items-center mb-3 product-wrapper"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/lu.jpg"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Guanacos
          </h6>
          <p
            className="m-0"
          >
            Verified Certificate
          </p>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        Summary
      </h5>
      <div
        className="summary-row d-flex"
      >
        <span
          className="flex-grow-1"
        >
          Price
        </span>
        <span
          className="summary-price"
        >
          /month USD after 7-day free trial
        </span>
      </div>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          Today's total
        </span>
        <span
          className="text-right"
        >
          $49.00
        </span>
      </div>
    </div>
    <div
      className="basket-section order-details"
    >
      <h5
        aria-level="2"
      >
        Order details
      </h5>
      <p
        className="mb-2"
      >
        The above total includes any applicable taxes.
      </p>
      <p
        className="mb-2"
      >
        After you complete your order you will have verified access to each course in Blockchain Fundamentals.
      </p>
      <p>
        Cancel anytime.
      </p>
    </div>
    <p
      className="micro"
    >
      By signing up for a subscription or starting a free trial, you authorize us to charge your card on file $49.00/month for Blockchain Fundamentals and any applicable taxes. If you signed up for a trial, we won’t charge your card until the end of your trial period. Your Blockchain Fundamentals subscription continues until canceled. Monthly subscriptions can be canceled at any time by 
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="https://support.edx.org/hc/en-us/sections/115004173027-Receive-and-Share-edX-Certificates"
        onClick={[Function]}
        target="_self"
      >
        contacting customer support.
      </a>
       Canceling a subscription stops the monthly recurring subscription charge, but doesn't refund the transaction for the current billing period. You can continue to access the subscription until the end of the then current billing period.
    </p>
  </div>
</section>
`;

exports[`<SubscriptionDetails /> renders a basic, one product details 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div>
    <span
      className="sr-only"
    >
      Shopping details are loaded.
    </span>
    <div
      className="basket-section"
    >
      <h5
        aria-level="2"
      >
        In your cart
      </h5>
      <div
        className=""
      >
        <div
          className="heading-badge-wrapper"
        >
          <h3
            aria-level="2"
            className="mb-0"
          >
            Blockchain Fundamentals
          </h3>
          <span
            className="badge badge-light"
          >
            Subscription
          </span>
        </div>
        <h4
          aria-level="2"
          className="mb-0"
        >
          Professional Certificate
        </h4>
        <p
          aria-level="2"
          className="body small mb-5"
        >
          University of California, Berkeley
        </p>
        <h5>
          Included with your subscription:
        </h5>
      </div>
      <div
        className="row align-items-center mb-3 product-wrapper"
      >
        <div
          className="col-5"
        >
          <div
            className="embed-responsive embed-responsive-16by9"
          >
            <img
              alt=""
              className="img-thumbnail product-thumbnail"
              src="https://edx.org/vot.png"
            />
          </div>
        </div>
        <div
          className="col-7"
        >
          <h6
            aria-level="3"
            className="m-0"
          >
            Introduction to Llamass
          </h6>
          <p
            className="m-0"
          >
            Verified Certificate
          </p>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="summary-heading"
      aria-live="polite"
      className="basket-section"
      role="region"
    >
      <h5
        aria-level="2"
        id="summary-heading"
      >
        Summary
      </h5>
      <div
        className="summary-row d-flex"
      >
        <span
          className="flex-grow-1"
        >
          Price
        </span>
        <span
          className="summary-price"
        >
          /month USD after 7-day free trial
        </span>
      </div>
      <div
        className="summary-row font-weight-bold d-flex"
      >
        <span
          className="flex-grow-1"
        >
          Today's total
        </span>
        <span
          className="text-right"
        >
          $49.00
        </span>
      </div>
    </div>
    <div
      className="basket-section order-details"
    >
      <h5
        aria-level="2"
      >
        Order details
      </h5>
      <p
        className="mb-2"
      >
        The above total includes any applicable taxes.
      </p>
      <p
        className="mb-2"
      >
        After you complete your order you will have verified access to each course in Blockchain Fundamentals.
      </p>
      <p>
        Cancel anytime.
      </p>
    </div>
    <p
      className="micro"
    >
      By signing up for a subscription or starting a free trial, you authorize us to charge your card on file $49.00/month for Blockchain Fundamentals and any applicable taxes. If you signed up for a trial, we won’t charge your card until the end of your trial period. Your Blockchain Fundamentals subscription continues until canceled. Monthly subscriptions can be canceled at any time by 
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="https://support.edx.org/hc/en-us/sections/115004173027-Receive-and-Share-edX-Certificates"
        onClick={[Function]}
        target="_self"
      >
        contacting customer support.
      </a>
       Canceling a subscription stops the monthly recurring subscription charge, but doesn't refund the transaction for the current billing period. You can continue to access the subscription until the end of the then current billing period.
    </p>
  </div>
</section>
`;

exports[`<SubscriptionDetails /> renders the loading skeleton 1`] = `
<section
  aria-label="Shopping Cart Details"
  aria-live="polite"
  aria-relevant="all"
>
  <div
    className="sub-cart-skeleton"
  >
    <span
      className="sr-only"
    >
      Loading, please wait...
    </span>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <div
      className="d-flex justify-content-between mb-2 align-items-center"
    >
      <span
        aria-busy={true}
        aria-live="polite"
        className="sub-skeleton-title mr-3"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "height": "28px",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy={true}
        aria-live="polite"
        className="sub-skeleton-badge"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "height": "24px",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton"
        style={
          Object {
            "width": "45%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton mb-4"
        style={
          Object {
            "width": "65%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <div
      className="row align-items-center mb-5"
    >
      <div
        className="col-5"
      >
        <span
          aria-busy={true}
          aria-live="polite"
        >
          <span
            className="react-loading-skeleton mb-2"
            style={
              Object {
                "width": "80%",
              }
            }
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy={true}
          aria-live="polite"
        >
          <span
            className="react-loading-skeleton embed-responsive embed-responsive-16by9"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        className="col-7 pl-0"
      >
        <span
          aria-busy={true}
          aria-live="polite"
        >
          <span
            className="react-loading-skeleton skeleton mb-2 w-50"
            style={Object {}}
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy={true}
          aria-live="polite"
        >
          <span
            className="react-loading-skeleton skeleton mr-4 py-1"
            style={Object {}}
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <div
      className="d-flex justify-content-between mb-5 price"
    >
      <span
        aria-busy={true}
        aria-live="polite"
        className="section-left"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "width": "70%",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy={true}
        aria-live="polite"
        className="section-right"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "width": "70%",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      className="d-flex justify-content-between mb-4 price"
    >
      <span
        aria-busy={true}
        aria-live="polite"
        className="section-left"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "width": "70%",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy={true}
        aria-live="polite"
        className="section-right"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "width": "70%",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton"
        style={
          Object {
            "width": "50%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton mb-4"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
    <span
      aria-busy={true}
      aria-live="polite"
    >
      <span
        className="react-loading-skeleton py-5"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        ‌
      </span>
      <br />
    </span>
  </div>
</section>
`;
